--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diplom Garipov</title>
     <link rel="stylesheet" href="style.css">
@@ -365,7 +364,7 @@
     <section class="popup-container">
         <div class="popup">
             <heading class="widget-block-heading">
-                <h4 class="products-header">Ваш Фидбек</h4>
+                <h4 class="popup-header">Ваш Фидбек</h4>
             </heading>
             <div class="close">
                 <a href="#" class="link-close"></a>
